fix contrast issue for code blocks

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -11432,7 +11432,7 @@ p {
 }
 
 code, pre {
-  color: #718096;
+  color: #2d3748;
   font-size: 0.875rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
