--- a/base.scss
+++ b/base.scss
@@ -27,7 +27,7 @@ p {
 }
 
 code, pre {
-  @apply text-gray-600 text-sm my-4;
+  @apply text-gray-800 text-sm my-4;
 }
 
 ul {
